@@ -341,11 +341,20 @@ public static partial class NetworkingManager
 		SendSequenceIfShould(false);//second playerirst because of ai and practice mode
 		SendSequenceIfShould(true);
 		
-		if (!SequenceManager.SequenceRunning && GameManager.PlayerUnitPositionsDirty && !HasPendingMessages)
+		if (!SequenceManager.SequenceRunning &!HasPendingMessages)
 		{
-			GameManager.UpdatePlayerSideUnitPositions();//make sure up to date info
-			SendAllSeenUnitPositions();
+			if (GameManager.ShouldRecalculateUnitPositions)
+			{
+				GameManager.UpdatePlayerSideUnitPositions();//make sure up to date info
+			}
+			if (GameManager.ShouldUpdateUnitPositions)
+			{
+				SendAllSeenUnitPositions();
+			}
+		
 		}
+
+
 		lock (UpdateLock)
 		{
 			server.Update();
@@ -657,7 +666,7 @@ public static partial class NetworkingManager
 			var act = UnitUpdate.Make(GameManager.Player2.KnownUnitPositions,false);
 			AddSequenceToSendQueue(act);
 		}
-		GameManager.PlayerUnitPositionsDirty = false;
+		GameManager.ShouldUpdateUnitPositions = false;
 
 	}
 
