@@ -26,3 +26,5 @@ Alpha 4.1
 -Added popups for kick reason being missing
 -Fixed a bug where the settings menu was closed by enemy unit movement
 -Smoke Particles!
+-Movement animation can be skipped by holding mouse button
+-Fixed action points flickering on/off when watching an enemy use an ability
